* Added localization to My eID information screen
Fixed expiration date parsing
Fixed My eID tab blocking
Cosmetic UI fixes

MOPPIOS-42

Signed-off-by: Sander Hunt <sander.hunt@fob-solutions.com>

--- a/MoppApp/MoppApp/MyEid.storyboard
+++ b/MoppApp/MoppApp/MyEid.storyboard
@@ -81,6 +81,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="DqR-NQ-ADW"/>
                     </view>
+                    <connections>
+                        <outlet property="titleLabel" destination="pwG-59-c68" id="AoB-TP-vWt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o2d-aE-qth" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -106,13 +109,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w8A-R2-bu9">
-                                                    <rect key="frame" x="15" y="11" width="345" height="27"/>
+                                                    <rect key="frame" x="15" y="8" width="345" height="41"/>
                                                     <fontDescription key="fontDescription" name="RobotoCondensed-Regular" family="Roboto Condensed" pointSize="17"/>
                                                     <color key="textColor" red="0.69411764710000001" green="0.70196078429999997" blue="0.70196078429999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kHp-sg-HRn">
-                                                    <rect key="frame" x="15" y="38" width="345" height="20"/>
+                                                    <rect key="frame" x="15" y="49" width="345" height="20"/>
                                                     <fontDescription key="fontDescription" name="RobotoCondensed-Bold" family="Roboto Condensed" pointSize="17"/>
                                                     <color key="textColor" red="0.015686274510000001" green="0.1176470588" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -120,8 +123,8 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="kHp-sg-HRn" firstAttribute="leading" secondItem="648-ae-GIY" secondAttribute="leadingMargin" id="32F-KV-mDC"/>
-                                                <constraint firstItem="w8A-R2-bu9" firstAttribute="top" secondItem="648-ae-GIY" secondAttribute="topMargin" id="Eio-rz-Jmj"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="kHp-sg-HRn" secondAttribute="bottom" id="Ga8-NF-R64"/>
+                                                <constraint firstItem="w8A-R2-bu9" firstAttribute="top" secondItem="648-ae-GIY" secondAttribute="top" constant="8" id="Eio-rz-Jmj"/>
+                                                <constraint firstAttribute="bottom" secondItem="kHp-sg-HRn" secondAttribute="bottom" id="Ga8-NF-R64"/>
                                                 <constraint firstItem="w8A-R2-bu9" firstAttribute="trailing" secondItem="648-ae-GIY" secondAttribute="trailingMargin" id="cWb-k8-2bP"/>
                                                 <constraint firstItem="kHp-sg-HRn" firstAttribute="trailing" secondItem="648-ae-GIY" secondAttribute="trailingMargin" id="mOy-kI-PHW"/>
                                                 <constraint firstItem="kHp-sg-HRn" firstAttribute="top" secondItem="w8A-R2-bu9" secondAttribute="bottom" id="rG8-98-bwm"/>
