--- a/MoppApp/MoppApp/MyEid.storyboard
+++ b/MoppApp/MoppApp/MyEid.storyboard
@@ -203,27 +203,27 @@
                                             <outlet property="titleLabel" destination="xZe-Sb-oBY" id="IjJ-RX-9WZ"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MyeIDPinPukCell" rowHeight="227" id="4lc-dq-tbf" customClass="MyeIDPinPukCell" customModule="MoppApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="167" width="375" height="227"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MyeIDPinPukCell" rowHeight="264" id="4lc-dq-tbf" customClass="MyeIDPinPukCell" customModule="MoppApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="167" width="375" height="264"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4lc-dq-tbf" id="TpW-2W-W0x">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="227"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="264"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PIN - Isikutuvastamise sertifikaat" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NJu-2L-EAd">
-                                                    <rect key="frame" x="15" y="19" width="345" height="24"/>
+                                                    <rect key="frame" x="15" y="19" width="345" height="31.5"/>
                                                     <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="20"/>
                                                     <color key="textColor" name="MoppTitle"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Sertifikaat kehtib kuni 10. august 2019" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qQ-fi-sih">
-                                                    <rect key="frame" x="15" y="47" width="345" height="20"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="Sertifikaat kehtib kuni 10. august 2019" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qQ-fi-sih">
+                                                    <rect key="frame" x="15" y="54.5" width="345" height="20"/>
                                                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                                     <color key="textColor" name="MoppLabel"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ea3-dl-Wz3">
-                                                    <rect key="frame" x="15" y="99" width="345" height="50"/>
+                                                    <rect key="frame" x="15" y="106.5" width="345" height="50"/>
                                                     <color key="backgroundColor" name="MoppBase"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="KZ9-h4-g4H"/>
@@ -239,20 +239,26 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="254" text="Unustasid PIN1 koodi?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9vn-PN-mob">
-                                                    <rect key="frame" x="15" y="181" width="345" height="19"/>
+                                                    <rect key="frame" x="15" y="218" width="345" height="19"/>
                                                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                                                     <color key="textColor" name="MoppLabel"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="254" text="PIN1 on sisestatud 3 kord valesti.  PIN1 on blokeeritud" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ST5-E7-4MQ">
+                                                    <rect key="frame" x="15" y="164.5" width="345" height="37.5"/>
+                                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
+                                                    <color key="textColor" name="MoppError"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DKW-MG-75P">
-                                                    <rect key="frame" x="15" y="226" width="345" height="1"/>
+                                                    <rect key="frame" x="15" y="263" width="345" height="1"/>
                                                     <color key="backgroundColor" red="0.83514291957700759" green="0.85184577796854777" blue="0.85184577796854777" alpha="0.7560199058219178" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="mT7-d5-mZK"/>
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bRI-cY-Mwr">
-                                                    <rect key="frame" x="15" y="168.5" width="345" height="44"/>
+                                                    <rect key="frame" x="15" y="205.5" width="345" height="44"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="pUV-Mw-39o"/>
@@ -267,18 +273,22 @@
                                                 <constraint firstAttribute="bottomMargin" secondItem="9vn-PN-mob" secondAttribute="bottom" constant="16" id="1nY-OQ-IsU"/>
                                                 <constraint firstItem="bRI-cY-Mwr" firstAttribute="centerY" secondItem="9vn-PN-mob" secondAttribute="centerY" id="3lK-hb-zGy"/>
                                                 <constraint firstItem="DKW-MG-75P" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leading" constant="15" id="EyQ-Ke-VQf"/>
+                                                <constraint firstItem="ST5-E7-4MQ" firstAttribute="trailing" secondItem="TpW-2W-W0x" secondAttribute="trailingMargin" id="Kz5-iF-C7V"/>
+                                                <constraint firstItem="ST5-E7-4MQ" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leadingMargin" id="MDC-q0-JWB"/>
                                                 <constraint firstItem="9vn-PN-mob" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leadingMargin" id="MiZ-62-bmj"/>
                                                 <constraint firstItem="Ea3-dl-Wz3" firstAttribute="top" secondItem="7qQ-fi-sih" secondAttribute="bottom" constant="32" id="NfE-GS-nbR"/>
                                                 <constraint firstItem="Ea3-dl-Wz3" firstAttribute="trailing" secondItem="TpW-2W-W0x" secondAttribute="trailingMargin" id="RZb-tO-KNq"/>
+                                                <constraint firstItem="ST5-E7-4MQ" firstAttribute="top" secondItem="Ea3-dl-Wz3" secondAttribute="bottom" priority="750" constant="8" id="STC-R3-beT"/>
                                                 <constraint firstItem="7qQ-fi-sih" firstAttribute="top" secondItem="NJu-2L-EAd" secondAttribute="bottom" constant="4" id="TtV-cf-bWZ"/>
                                                 <constraint firstAttribute="trailing" secondItem="bRI-cY-Mwr" secondAttribute="trailing" constant="15" id="VLT-Ka-XcN"/>
-                                                <constraint firstItem="9vn-PN-mob" firstAttribute="top" secondItem="Ea3-dl-Wz3" secondAttribute="bottom" constant="32" id="XFF-WF-qRL"/>
                                                 <constraint firstItem="bRI-cY-Mwr" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leading" constant="15" id="Yy4-QR-d2x"/>
                                                 <constraint firstItem="NJu-2L-EAd" firstAttribute="top" secondItem="TpW-2W-W0x" secondAttribute="topMargin" constant="8" id="cjN-Dp-SbP"/>
+                                                <constraint firstItem="ST5-E7-4MQ" firstAttribute="top" secondItem="7qQ-fi-sih" secondAttribute="bottom" priority="250" constant="32" id="cym-Fg-aF2"/>
                                                 <constraint firstItem="7qQ-fi-sih" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leadingMargin" id="iaa-V5-P17"/>
                                                 <constraint firstItem="NJu-2L-EAd" firstAttribute="trailing" secondItem="TpW-2W-W0x" secondAttribute="trailingMargin" id="irx-e2-V7e"/>
                                                 <constraint firstItem="7qQ-fi-sih" firstAttribute="trailing" secondItem="TpW-2W-W0x" secondAttribute="trailingMargin" id="lN7-oh-cvY"/>
                                                 <constraint firstItem="NJu-2L-EAd" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leadingMargin" id="lid-df-Dra"/>
+                                                <constraint firstItem="9vn-PN-mob" firstAttribute="top" secondItem="ST5-E7-4MQ" secondAttribute="bottom" constant="16" id="n8P-1N-NBL"/>
                                                 <constraint firstAttribute="trailing" secondItem="DKW-MG-75P" secondAttribute="trailing" constant="15" id="ttS-R0-TMT"/>
                                                 <constraint firstItem="Ea3-dl-Wz3" firstAttribute="leading" secondItem="TpW-2W-W0x" secondAttribute="leadingMargin" id="uaD-3w-sLv"/>
                                                 <constraint firstItem="9vn-PN-mob" firstAttribute="trailing" secondItem="TpW-2W-W0x" secondAttribute="trailingMargin" id="zGh-W3-rQP"/>
@@ -290,7 +300,11 @@
                                             <outlet property="bottomLine" destination="DKW-MG-75P" id="qzk-1I-cCF"/>
                                             <outlet property="button" destination="Ea3-dl-Wz3" id="1ql-or-fx5"/>
                                             <outlet property="certInfoLabel" destination="7qQ-fi-sih" id="a0h-vL-rds"/>
+                                            <outlet property="errorLabel" destination="ST5-E7-4MQ" id="N46-Oj-SDy"/>
+                                            <outlet property="hideChangeButtonCSTR" destination="cym-Fg-aF2" id="41w-Zk-L83"/>
+                                            <outlet property="linkButton" destination="bRI-cY-Mwr" id="S1R-zJ-l13"/>
                                             <outlet property="linkLabel" destination="9vn-PN-mob" id="LDM-Ek-1vC"/>
+                                            <outlet property="showChangeButtonCSTR" destination="STC-R3-beT" id="1V4-gs-0lw"/>
                                             <outlet property="titleLabel" destination="NJu-2L-EAd" id="KTE-BU-vS4"/>
                                         </connections>
                                     </tableViewCell>
@@ -355,6 +369,9 @@
         <image name="VerticalDotsMenu" width="25" height="25"/>
         <namedColor name="MoppBase">
             <color red="0.0" green="0.43137254901960786" blue="0.70980392156862748" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="MoppError">
+            <color red="0.59607843137254901" green="0.11764705882352941" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="MoppLabel">
             <color red="0.45882352941176469" green="0.47058823529411764" blue="0.4823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
